Code refactoring .
git-svn-id: https://ncisvn.nci.nih.gov/svn/wustl_common_package/CommonPackage@1315 38c78225-d16a-144f-a689-2cd41fac0795